Opened 13 years ago

Closed 12 years ago

#3131 closed defect (fixed)

h264 mp4 decoding regression

Reported by: Carl Eugen Hoyos Owned by:
Priority: important Component: avcodec
Version: git-master Keywords: h264 regression
Cc: fpot Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

A user uploaded a sample that shows visual corruption since 7973a075

$ ffmpeg -i h264\ broken\ FFmpeg.mp4 -an -qscale 2 out.avi
ffmpeg version N-58049-gf04fe23 Copyright (c) 2000-2013 the FFmpeg developers
  built on Nov 13 2013 12:11:43 with gcc 4.7 (SUSE Linux)
  configuration: --enable-gpl
  libavutil      52. 52.100 / 52. 52.100
  libavcodec     55. 41.101 / 55. 41.101
  libavformat    55. 21.100 / 55. 21.100
  libavdevice    55.  5.100 / 55.  5.100
  libavfilter     3. 91.100 /  3. 91.100
  libswscale      2.  5.101 /  2.  5.101
  libswresample   0. 17.104 /  0. 17.104
  libpostproc    52.  3.100 / 52.  3.100
Input #0, mov,mp4,m4a,3gp,3g2,mj2, from 'h264 broken FFmpeg.mp4':
  Metadata:
    major_brand     : isom
    minor_version   : 1
    compatible_brands: isom
    creation_time   : 2013-11-11 08:48:36
  Duration: 00:00:06.92, start: 0.000000, bitrate: 661 kb/s
    Stream #0:0(und): Video: h264 (High) (avc1 / 0x31637661), yuv420p, 720x480 [SAR 32:27 DAR 16:9], 595 kb/s, SAR 853:720 DAR 853:480, 23.98 fps, 23.98 tbr, 24k tbn, 47.95 tbc (default)
    Metadata:
      creation_time   : 2012-07-14 02:42:49
      handler_name    : Imported with GPAC 0.4.6-DEV (internal rev. 5)
    Stream #0:1(und): Audio: aac (mp4a / 0x6134706D), 48000 Hz, stereo, fltp, 62 kb/s (default)
    Metadata:
      creation_time   : 2012-07-14 02:42:58
      handler_name    : GPAC ISO Audio Handler
Please use -q:a or -q:v, -qscale is ambiguous
[mpeg4 @ 0x26fda60] Invalid pixel aspect ratio 853/720, limit is 255/255 reducing
Output #0, avi, to 'out.avi':
  Metadata:
    major_brand     : isom
    minor_version   : 1
    compatible_brands: isom
    ISFT            : Lavf55.21.100
    Stream #0:0(und): Video: mpeg4 (FMP4 / 0x34504D46), yuv420p, 720x480 [SAR 186:157 DAR 279:157], q=2-31, 200 kb/s, SAR 853:720 DAR 853:480, 23.98 tbn, 23.98 tbc (default)
    Metadata:
      creation_time   : 2012-07-14 02:42:49
      handler_name    : Imported with GPAC 0.4.6-DEV (internal rev. 5)
Stream mapping:
  Stream #0:0 -> #0:0 (h264 -> mpeg4)
Press [q] to stop, [?] for help
[h264 @ 0x27890e0] Invalid mix of idr and non-idr slices
Error while decoding stream #0:0: Invalid data found when processing input
frame=  165 fps=0.0 q=2.0 Lsize=    2816kB time=00:00:06.96 bitrate=3312.4kbits/s
video:2807kB audio:0kB subtitle:0 global headers:0kB muxing overhead 0.343029%

Attachments (1)

h264 broken FFmpeg.mp4 (559.2 KB ) - added by Carl Eugen Hoyos 13 years ago.

Download all attachments as: .zip

Change History (4)

by Carl Eugen Hoyos, 13 years ago

Attachment: h264 broken FFmpeg.mp4 added

comment:1 by Carl Eugen Hoyos, 13 years ago

Cc: fpot added

comment:2 by Clément Bœsch, 12 years ago

Status: newopen

Still reproducible.

comment:3 by Michael Niedermayer, 12 years ago

Reproduced by developer: set
Resolution: fixed
Status: openclosed
Note: See TracTickets for help on using tickets.