avcodec/h264: allow mixing idr and non idr slices with frame threading again

This combination exists in the wild
Fixes Ticket3131

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>